fixed bug in Firefox and IE where chevron was missing from dropdown <select> menues and sizes of elements was too small

--- a/_base.forms.scss
+++ b/_base.forms.scss
@@ -58,6 +58,9 @@ $inuit-forms-select-background              : $gray3 !default;
 /// @type Color [default] - Select dropdown font color
 $inuit-forms-select-color                   : $gray9 !default;
 
+/// @type Color [default] - Select dropdown chevron font color
+$inuit-forms-select-color-svg                   : "#{$gray9}" !default;
+
 /// @type Color | String [default] - Select dropdown dark shadow
 $inuit-forms-select-shadow--dark            : 0 1px 0 rgba($black, .1) !default;
 
@@ -66,6 +69,9 @@ $inuit-forms-select-shadow--light           : 0 1px 0 rgba($black, .1) !default;
 
 /// @type Color [default] - Select dropdown disabled font color
 $inuit-forms-select-color--disabled         : $gray4 !default;
+
+/// @type Color [default] - Select dropdown disabled chevron font color
+$inuit-forms-select-color-svg--disabled         : "#{$gray4}" !default;
 
 /// @type Color [default] - Select dropdown disabled background color
 $inuit-forms-select-background--disabled    : $white !default;
@@ -213,7 +219,7 @@ select {
   line-height: calc(2em - 2px);
   cursor: pointer;
   background-color: $inuit-forms-select-background;
-  background-image: url('data:image/svg+xml;utf8,%3csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%2212%22 viewBox=%220 0 658 1024%22%3e%3cpath fill=%22#{$inuit-forms-select-color}%22 d=%22M614.286 420.571q0 7.429-5.714 13.143l-266.286 266.286q-5.714 5.714-13.143 5.714t-13.143-5.714l-266.286-266.286q-5.714-5.714-5.714-13.143t5.714-13.143l28.571-28.571q5.714-5.714 13.143-5.714t13.143 5.714l224.571 224.571 224.571-224.571q5.714-5.714 13.143-5.714t13.143 5.714l28.571 28.571q5.714 5.714 5.714 13.143z%22/%3e%3c/svg%3e');
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20viewBox%3D%220%200%20658%201024%22%3E%3Cpath%20fill%3D%22%23#{str-slice($inuit-forms-select-color-svg,2)}%22%20d%3D%22M614.286%20420.571q0%207.429-5.714%2013.143l-266.286%20266.286q-5.714%205.714-13.143%205.714t-13.143-5.714l-266.286-266.286q-5.714-5.714-5.714-13.143t5.714-13.143l28.571-28.571q5.714-5.714%2013.143-5.714t13.143%205.714l224.571%20224.571%20224.571-224.571q5.714-5.714%2013.143-5.714t13.143%205.714l28.571%2028.571q5.714%205.714%205.714%2013.143z%22%2F%3E%3C%2Fsvg%3E');
   background-repeat: no-repeat;
   background-position: calc(100% - #{$inuit-base-spacing-unit--small}) 37.5%;
   color: $inuit-forms-select-color;
@@ -231,7 +237,7 @@ select {
     border: 1px solid $inuit-forms-select-color--disabled;
     box-shadow: none;
     background-color: $inuit-forms-select-background--disabled;
-    background-image: url('data:image/svg+xml;utf8,%3csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%2212%22 viewBox=%220 0 658 1024%22%3e%3cpath fill=%22#{$inuit-forms-select-color--disabled}%22 d=%22M614.286 420.571q0 7.429-5.714 13.143l-266.286 266.286q-5.714 5.714-13.143 5.714t-13.143-5.714l-266.286-266.286q-5.714-5.714-5.714-13.143t5.714-13.143l28.571-28.571q5.714-5.714 13.143-5.714t13.143 5.714l224.571 224.571 224.571-224.571q5.714-5.714 13.143-5.714t13.143 5.714l28.571 28.571q5.714 5.714 5.714 13.143z%22/%3e%3c/svg%3e');
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20viewBox%3D%220%200%20658%201024%22%3E%3Cpath%20fill%3D%22%23#{str-slice($inuit-forms-select-color-svg--disabled,2)}%22%20d%3D%22M614.286%20420.571q0%207.429-5.714%2013.143l-266.286%20266.286q-5.714%205.714-13.143%205.714t-13.143-5.714l-266.286-266.286q-5.714-5.714-5.714-13.143t5.714-13.143l28.571-28.571q5.714-5.714%2013.143-5.714t13.143%205.714l224.571%20224.571%20224.571-224.571q5.714-5.714%2013.143-5.714t13.143%205.714l28.571%2028.571q5.714%205.714%205.714%2013.143z%22%2F%3E%3C%2Fsvg%3E');
     color: $inuit-forms-select-color--disabled;
   }
   &[multiple] {
@@ -244,6 +250,20 @@ select {
 
 select::-ms-expand {
     display: none;
+}
+
+@-moz-document url-prefix() {
+    select {
+        padding-top: .4em;
+        padding-bottom: .4em;
+    }
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  select {
+    padding-top: .4em;
+    padding-bottom: .4em;
+  }
 }
 
 .#{$inuit-forms-namespace}text-input,
